[gd_scene load_steps=12 format=3 uid="uid://f8okygxtd5jl"]

[ext_resource type="Shader" uid="uid://djbveqa16207n" path="res://gdshader/background2.gdshader" id="1_ld5nc"]
[ext_resource type="Script" uid="uid://iki2bfa2n35p" path="res://scene/Control/readiness_menu.gd" id="1_tkn4i"]
[ext_resource type="Texture2D" uid="uid://yt13xm0sqtb8" path="res://texture/ui/ban.svg" id="2_23pj6"]
[ext_resource type="Texture2D" uid="uid://dhi6r0x2440t7" path="res://texture/ui/back.svg" id="4_f1i2g"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ld5nc"]
noise_type = 3
frequency = 0.3371

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_23pj6"]
width = 128
height = 128
generate_mipmaps = false
noise = SubResource("FastNoiseLite_ld5nc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tkn4i"]
shader = ExtResource("1_ld5nc")
shader_parameter/separation = 0.05
shader_parameter/radius = 0.018000000855
shader_parameter/min_thick = 0.4470000212325
shader_parameter/speed = 0.0150000007125
shader_parameter/tilt_45 = true
shader_parameter/direction = -59.9999943
shader_parameter/noise_texture = SubResource("NoiseTexture2D_23pj6")
shader_parameter/color1 = Color(0, 0, 0, 1)
shader_parameter/color2 = Color(0.097287685, 0.0972877, 0.097287685, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1i2g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1i2g"]
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.7607843)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tddnb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.8784314)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgk8p"]

[node name="Control" type="Control" node_paths=PackedStringArray("map", "mode", "population", "AI_level")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tkn4i")
map = NodePath("Panel/ScrollContainer/VBoxContainer/Map/OptionButton")
mode = NodePath("Panel/ScrollContainer/VBoxContainer/Mode/OptionButton")
population = NodePath("Panel/ScrollContainer/VBoxContainer/Population/SpinBox")
AI_level = NodePath("Panel/ScrollContainer/VBoxContainer/AI_Level/SpinBox")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tkn4i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Map" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3263889
anchor_top = 0.061728396
anchor_right = 0.6736111
anchor_bottom = 0.67901236
grow_horizontal = 2
texture = ExtResource("2_23pj6")
expand_mode = 2
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Map"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Map"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_f1i2g")
icon = ExtResource("4_f1i2g")
flat = true
expand_icon = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25260416
anchor_top = 0.75617284
anchor_right = 0.7473958
anchor_bottom = 0.9583333
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_f1i2g")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Map" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "地图"

[node name="OptionButton" type="OptionButton" parent="Panel/ScrollContainer/VBoxContainer/Map"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 35
selected = 0
item_count = 3
popup/item_0/text = "雪地 (Ice World)"
popup/item_0/id = 0
popup/item_1/text = "核弹小镇"
popup/item_1/id = 1
popup/item_2/text = "断桅港"
popup/item_2/id = 2

[node name="Mode" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "模式"

[node name="OptionButton" type="OptionButton" parent="Panel/ScrollContainer/VBoxContainer/Mode"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 35
selected = 0
item_count = 3
popup/item_0/text = "冲锋团队竞技"
popup/item_0/id = 0
popup/item_1/text = "战术团队竞技"
popup/item_1/id = 1
popup/item_2/text = "死斗"
popup/item_2/id = 2

[node name="Population" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "人数"

[node name="SpinBox" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer/Population"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/field_and_buttons_separation = 1
min_value = 2.0
max_value = 50.0
value = 10.0
rounded = true
alignment = 1
suffix = "人"
custom_arrow_step = 1.0

[node name="AI_Level" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "人机难度"

[node name="SpinBox" type="SpinBox" parent="Panel/ScrollContainer/VBoxContainer/AI_Level"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/field_and_buttons_separation = 1
max_value = 10.0
value = 5.0
alignment = 1
custom_arrow_step = 1.0

[node name="Continue" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -41.5
offset_right = 226.0
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxFlat_tddnb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tddnb")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddnb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgk8p")
text = "继续"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Continue" to="." method="_on_continue_pressed"]
